Fixed background lines not going whole height on small screens and fixed title hovering on profiles when it is not editable, and should not

--- a/app/assets/stylesheets/schedule.css
+++ b/app/assets/stylesheets/schedule.css
@@ -293,6 +293,11 @@
 	background: rgba(0,0,0,0.25);
 	box-shadow: 0px 0px 3px black;
 }
+.page-container .evnt-title
+{
+	background: none !important;
+	box-shadow: none !important;
+}
 /* Give editable text fields proper cursor */
 .evnt-title:focus, .catOverlayTitle:focus
 {
